# email-to-telegram

./: .gitignore  README.md  config.py  email_to_telegram.py  pyproject.toml
