[tool.poetry]
name = "email-to-telegram"
version = "0.1.0"
description = "Project that reforwards retrieved mails to telegram user."
authors = ["Vladyslav Zlochevskyi <zlochvla@fel.cvut.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
